--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/horta" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/imagenesSILVER.png" />
+    <link rel="icon" href="%PUBLIC_URL%/lunaIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/imagenesSILVER.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/lunaIcon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
